2021-02-14  Allen D. Ball  <ball@hcf.dev>

	* Added (trivial) Magic implementations for JShell methods.

	* Reload Magic service providers on Shell (re)start.

2021-02-13  Allen D. Ball  <ball@hcf.dev>

	* Create an isolated ClassLoader in the JShell instance to load
	the galyleo-kernel.jar.

	* src/main/resources/bootstrap.jsh:
	Initial writing: Bootstrap galyleo-kernel.jar in JShell instance
	and provide user methods (e.g., print(Object)) and kernel
	implementation methods (e.g., Magic.receive()).

	* src/main/java/galyleo/kernel/Kernel.java:
	Load all JARS in ${spark-home}/jars and ${hadoop-home}/jars even
	if duplicate groupId:artifactId are implemented.

2021-02-10  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Server.java:
	Added isComplete(String) to interface and implemented
	is_complete_request/is_complete_reply.

2021-02-09  Allen D. Ball  <ball@hcf.dev>

	* Track Connections in the Server and associate a Connection with
	each Dispatcher.  Implement connect_request/connect_reply and
	comm_info_request/comm_info_reply (although comms are not yet
	managed).

2021-02-08  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Server.java:
	Parse kernel-ID from connection-file file name and maintain
	kernel-ID/Connection map.

	* src/main/java/galyleo/kernel/KernelRestController.java:
	Initial writing (removed from Kernel).

	* Changed Launcher, Install, Connect, and Kernel to implement
	ApplicationRunner for command line argument processing.

	* src/main/java/galyleo/kernel/Kernel.java:
	Implement @RestController, ApplicationContextAware, and
	ApplicationRunner (the last to parse command line arguments).

	* src/main/java/galyleo/server/Message.java:
	Use JsonNode.toPrettyString() to implement toString().

	* src/main/java/galyleo/server/Channel.java:
	Report InvocationTargetException.getCause().

	* pom.xml: Added spring-boot-starter-web.

2021-02-05  Allen D. Ball  <ball@hcf.dev>
